kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: edu-stoic-dubinsky
  labels:
    app: django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: morozdocker/django_app_k8_test:Rv6
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
