kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: edu-stoic-dubinsky
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
